--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "highcharts": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-jsx-highcharts": "^3.3.0-beta.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
@@ -21,5 +24,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0"
+  }
 }
