--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-jsx-highcharts": "^3.3.0-beta.1",
+    "react-modal": "^3.6.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
